# inky-driver

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
include/: inky-api.h  inky.h
src/: inky.c  luts.h
tests/: fb-test.c
